--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,13 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "barryvdh/laravel-dompdf": "0.8.*",
+        "consoletvs/charts": "6.*",
         "fideloper/proxy": "^4.0",
+        "khill/lavacharts": "^3.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
+        "maatwebsite/excel": "2.1.*",
         "uxweb/sweet-alert": "^2.0"
     },
     "require-dev": {
